--- a/lesson_2_Васильев/app/src/main/res/drawable/button_pressed_shape.xml
+++ b/lesson_2_Васильев/app/src/main/res/drawable/button_pressed_shape.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size
-        android:width="60dp"
-        android:height="10dp" />
-    <solid android:color="@color/buttonColor"></solid>
+    <solid android:color="@color/buttonColor" />
     <corners
         android:bottomLeftRadius="7dp"
         android:topRightRadius="7dp" />
